--- a/source/css/secondary.css
+++ b/source/css/secondary.css
@@ -122,12 +122,10 @@ sc-button {
   padding: 9px;
   margin-right: 10px;
   transition: transform .5s;
-  -webkit-transition: -webkit-transform .5s;
   position: relative;
 }
 
 sc-button:hover {
-  -webkit-transform: scale(1.2);
   transform: scale(1.2);
 }
 
